Fixed small CSS issues and also re-added collapsing regions to the code. About to add a feature or two

--- a/alongtheway-frontend/src/app/home/home.component.css
+++ b/alongtheway-frontend/src/app/home/home.component.css
@@ -102,7 +102,7 @@
   margin-left: auto;
   margin-right: 49px;
   margin-bottom: 2px;
-  margin-top: 3px;
+  margin-top: 4px;
   font-family: var(--main-font-family);
 }
 
@@ -242,6 +242,8 @@
   margin-left: 0; /* Remove the left margin */
   font-size: 14px;
   font-family: var(--main-font-family);
+  margin-top: 2px;
+  margin-bottom: 1px;
 }
 
 .input-text {
